更新しました

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>TEST風！10問クイズ</title>
+  <title>ジョジョ風！中学１年期末10問クイズ（家庭科）</title>
   <style>
     body {
       font-family: sans-serif;
