更新しました

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 </head>
 <body>
 
-  <h1>ジョジョ風！10問クイズ</h1>
+  <h1>ジョジョ風！中学１年期末10問クイズ（家庭科）</h1>
 
   <div class="question-box">
     <div id="question">問題を読み込み中...</div>
