更新しました

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ﻿<!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8">
-  <title>ジョジョ風！中学１年期末10問クイズ（家庭科）</title>
+  <meta charset="UTF-8" />
+  <title>中学１年期末100問クイズ（家庭科）</title>
   <style>
     body {
       font-family: sans-serif;
@@ -33,7 +33,7 @@
 </head>
 <body>
 
-  <h1>ジョジョ風！中学１年期末10問クイズ（家庭科）</h1>
+  <h1>中学１年期末100問クイズ（家庭科）</h1>
 
   <div class="question-box">
     <div id="question">問題を読み込み中...</div>
@@ -59,16 +59,88 @@
 
   <script>
     const quizData = [
-      { question: "日本の首都は？", answer: "東京" },
-      { question: "富士山の標高は？", answer: "約3,776メートル" },
-      { question: "日本の通貨は？", answer: "円" },
-      { question: "サッカーで手を使える選手は？", answer: "ゴールキーパー" },
-      { question: "1年は何か月？", answer: "12か月" },
-      { question: "水は化学式で？", answer: "H2O" },
-      { question: "日の出の方角は？", answer: "東" },
-      { question: "五輪の輪の数は？", answer: "5つ" },
-      { question: "ひらがなは何文字？", answer: "46文字" },
-      { question: "世界一人口が多い国は？", answer: "中国" },
+      { question: "インドの民族衣装で布を体に巻き付けるものは？", answer: "サリー" },
+      { question: "チリやメキシコで布の一部に穴をあけて頭からかぶる民族衣装は？", answer: "ポンチョ" },
+      { question: "インドネシアの腰布型民族衣装の一つは？", answer: "バティック" },
+      { question: "日本の伝統的な衣装で前開型でひもで締めるものは？", answer: "着物" },
+      { question: "イギリスの体形型民族衣装で洋服の元となったものは？", answer: "キルト" },
+      { question: "沖縄の鮮やかな色彩の伝統衣装は？", answer: "紅型" },
+      { question: "アイヌの木の皮から作られた糸を用いる伝統衣装は？", answer: "アットゥシ" },
+      { question: "金沢に伝わる染物は？", answer: "加賀友禅" },
+      { question: "京都に伝わる織物は？", answer: "西陣織" },
+      { question: "茨城や栃木に伝わる織物は？", answer: "結城紬" },
+      { question: "既婚者女性の第一礼服は？", answer: "黒留袖" },
+      { question: "未婚女性の第一礼服は？", answer: "振袖" },
+      { question: "男性の第一礼服は？", answer: "黒羽二重" },
+      { question: "既婚・未婚女性の準礼服は？", answer: "訪問着" },
+      { question: "男性の準礼服は？", answer: "色紋付" },
+      { question: "「夫婦のみ」「夫婦と未婚の子ども」などからなる家族は？", answer: "核家族" },
+      { question: "「核家族に祖父や祖母などが同居する家族」は？", answer: "拡大家族" },
+      { question: "祖父母と親子で構成される家族は？", answer: "三世代家族" },
+      { question: "婚姻届を出さずに共に暮らす形は？", answer: "事実婚" },
+      { question: "「Double income No Kids」の略で子どもを持たない共働き夫婦は？", answer: "DINKS" },
+      { question: "共働きで子育てをする夫婦は？", answer: "DEWKS" },
+      { question: "再婚して築かれる家族は？", answer: "ステップファミリー" },
+      { question: "別々に暮らし必要なときだけ会う共働き夫婦は？", answer: "オンデマンド婚" },
+      { question: "少子化の原因の一つは？", answer: "晩婚化" },
+      { question: "子育てと仕事の両立の困難さは少子化の？", answer: "原因" },
+      { question: "育児休業の充実は少子化の？", answer: "解決策" },
+      { question: "男女が性別に関係なく能力を発揮する社会は？", answer: "ジェンダーレス" },
+      { question: "育児・介護のために休業できることを定めた制度は？", answer: "ジェンダーフリー" },
+      { question: "仕事と家庭生活のバランスを大切にする考えは？", answer: "ワーク・ライフ・バランス" },
+      { question: "近年、日本の世帯数はどうなっている？", answer: "増加している" },
+      { question: "最近増加している世帯形態は？", answer: "単身世帯" },
+      { question: "「夫婦と子どもだけで構成される家庭」は？", answer: "核家族" },
+      { question: "昭和55年に最も多かった世帯構造は？", answer: "三世代世帯" },
+      { question: "平成19年に最も多かった世帯は？", answer: "夫婦のみの世帯" },
+      { question: "ミシンの縫い始めは押さえをどうする？", answer: "上げる" },
+      { question: "ミシンの縫い始めははずみ車をどうする？", answer: "手前に回す" },
+      { question: "ミシン縫いの縫い終わりは針をどうする？", answer: "上げる" },
+      { question: "ミシンを運ぶときはどうする？", answer: "カバーを外さずに運ぶ" },
+      { question: "縫うとき以外はミシンのコントローラーからどうしてる？", answer: "足を外す" },
+      { question: "ミシンの針の下に手をいれていい？", answer: "手を入れない" },
+      { question: "布作品の制作で用具の扱いは？", answer: "安全" },
+      { question: "しつけ縫いは出来上がり線よりどのくらい外側に縫う？", answer: "0.1cm" },
+      { question: "しつけ縫いの縫い目はどのくらいで縫う？", answer: "1〜1.5cm" },
+      { question: "ミシン縫いはどの線の上で縫う？", answer: "できあがり線" },
+      { question: "縫い始めと終わりはどうやったら丈夫になる？", answer: "返し縫い" },
+      { question: "家家族の生活を支える家庭の仕事には、どんな種類がある？", answer: "食事を作る、洗濯をする、掃除をする、子育てをする、
+地域と関わる、金銭を管理する、介護をする" },
+      { question: "家庭の仕事で2番目に多い中学生の分担は？", answer: "掃除をする" },
+      { question: "家庭の仕事で2番目に多い中学生の分担は？", answer: "掃除をする" },
+      { question: "家庭の仕事で3番目に多い中学生の分担は？", answer: "買い物をする" },
+      { question: "家庭の仕事で4番目に多い中学生の分担は？", answer: "ゴミを出す" },
+      { question: "家族や地域で互いに助け合うことを何と言う？", answer: "協力・協働" },
+      { question: "家族で責任を持って仕事をすると何が生まれる？", answer: "信頼関係" },
+      { question: "家庭の仕事にはどんな種類がある？", answer: "食事作り・洗濯・掃除・子育て・介護" },
+      { question: "地域での防犯・防災で求められることは何？", answer: "協力" },
+      { question: "地域のルールを守り仕事を分担することは何と言う？", answer: "協働" },
+      { question: "無償で行う社会活動は何と言う？", answer: "ボランティア" },
+      { question: "多様な立場の人が共に生活することを何と言う？", answer: "共生" },
+      { question: "共生の基盤となるものは何？", answer: "コミュニケーションの機会" },
+      { question: "体を汚れやけがから守る衣服は？", answer: "エプロン" },
+      { question: "運動や作業しやすくする衣服は？", answer: "体操着" },
+      { question: "所属集団を表す衣服は？", answer: "学校の制服" },
+      { question: "職業を表す衣服は？", answer: "看護師の制服" },
+      { question: "暑さを調節する衣服は？", answer: "半袖のTシャツ" },
+      { question: "寒さを調節する衣服は？", answer: "コート" },
+      { question: "個性を表す衣服は？", answer: "ふだん着" },
+      { question: "社会の慣習で悲しみや祝いを表す衣服は？", answer: "礼服" },
+      { question: "体を清潔に保つ衣服は？", answer: "下着" },
+      { question: "TPOのOは？", answer: "Occasion" },
+      { question: "TPOのTは？", answer: "Time" },
+      { question: "TPOのPは？", answer: "Place" },
+      { question: "結婚式で避けるべき服装は？", answer: "全身真っ白・全身真っ黒" },
+      { question: "結婚式で好ましい服装は？", answer: "礼節をわきまえつつ、華やかな服装" },
+      { question: "衣服の組み合わせや、えりの有無や形などによって、周りの人にから変わるものは？", answer: "印象" },
+      { question: "同じ色でも印象の変わる素材の種類はどんな物がある？", answer: "ニット・絹・綿" },
+      { question: "自分が生まれもった色、肌や髪、瞳などと調和する色は何と言う？", answer: "パーソナルカラー" },,
+      { question: "衣服を選ぶ際に重要なのは？", answer: "TPOを考える" },
+      { question: "地域の行事に参加する意味は？", answer: "地域とのつながりを深めるため" },
+      { question: "体操着は何のために着る？", answer: "運動しやすくするため" },
+      { question: "エプロンを着ける理由は？", answer: "汚れやけがから守るため" },
+      { question: "返し縫いをする理由は？", answer: "縫い目を丈夫にするため" },
+      { question: "家族の役割分担で大切なことは？", answer: "お互いに協力すること" },
     ];
 
     let current = 0;
