更新しました

--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
       { question: "婚姻届を出さずに共に暮らす形は？", answer: "事実婚" },
       { question: "「Double income No Kids」の略で子どもを持たない共働き夫婦は？", answer: "DINKS" },
       { question: "共働きで子育てをする夫婦は？", answer: "DEWKS" },
-      { question: "再婚して築かれる家族は？", answer: "ステップファミリー" },
-      { question: "別々に暮らし必要なときだけ会う共働き夫婦は？", answer: "オンデマンド婚" },
+      { question: "どこかに子どもがいて再婚して築かれる家族のことを何というか？", answer: "ステップファミリー" },
+      { question: "別々に暮らし、必要なときだけ会う共働き夫婦は？", answer: "オンデマンド婚" },
       { question: "少子化の原因の一つは？", answer: "晩婚化" },
       { question: "子育てと仕事の両立の困難さは少子化の？", answer: "原因" },
       { question: "育児休業の充実は少子化の？", answer: "解決策" },
