更新しました

--- a/index.html
+++ b/index.html
@@ -29,6 +29,26 @@
       border: 1px solid #ccc;
       padding: 8px;
     }
+    #question {
+      font-size: 1.8em;        /* フォントサイズを大きく */
+      font-weight: bold;       /* 太字にする */
+      line-height: 1.6;        /* 行間を広げる */
+      background-color: #fff;  /* 背景を白にして読みやすく */
+      padding: 20px;           /* 内側の余白 */
+      margin-bottom: 20px;     /* 下に余白 */
+      border-radius: 10px;     /* 角を丸めて柔らかい印象に */
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* 薄い影をつけて浮き出させる */
+    }
+    #answer {
+      font-size: 1.6em;            /* フォントを大きく */
+      font-weight: bold;           /* 太字に */
+      color: #003366;              /* 濃い青系で視認性UP */
+      background-color: #e6f0ff;   /* 青系の淡い背景色 */
+      padding: 20px;
+      border-radius: 10px;
+      margin-bottom: 15px;
+      box-shadow: 0 0 8px rgba(0,0,0,0.1);
+    }
   </style>
 </head>
 <body>
