更新しました

--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
       { question: "共働きで子育てをする夫婦は？", answer: "DEWKS" },
       { question: "どこかに子どもがいて再婚して築かれる家族のことを何というか？", answer: "ステップファミリー" },
       { question: "別々に暮らし、必要なときだけ会う共働き夫婦は？", answer: "オンデマンド婚" },
-      { question: "少子化の原因の一つで、特に大きな要因は？", answer: "晩婚化" },
-      { question: "少子化の原因として、主な理由は？", answer: "子育てと仕事の両立の困難さ" },
-      { question: "少子化の解決策で現状一番有効な策と言われているものは？", answer: "育児休業の充実" },
+      { question: "少子化の原因の一つで、結婚についての大きな要因は？", answer: "晩婚化" },
+      { question: "少子化の原因の一つで、両立できなかった主な理由は？", answer: "子育てと仕事の両立の困難さ" },
+      { question: "少子化の解決策で現状、主に有効な策と言われているものは？", answer: "育児休業の充実" },
       { question: "男女が性別に関係なく能力を発揮する社会は何という？", answer: "ジェンダーレス" },
       { question: "育児・介護のために休業できることを定めた制度は何という？", answer: "ジェンダーフリー" },
       { question: "仕事と家庭生活のバランスを大切にする考えは何という？", answer: "ワーク・ライフ・バランス" },
